# RotationalMatrix

./: .gitignore  README.md  engine.py  main.py  pyproject.toml  pyproject.toml.backup  replit_zip_error_log.txt  requirements.txt  user_input.py
src/rotational_matrix/: __init__.py  cli.py  math3d.py  shapes.py  visualize.py
tests/: test_math3d.py
