[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "rotational-matrix"
version = "0.2.0"
description = "Rotation matrices, quaternions, and a small matplotlib visualizer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fawz Mehfil" }]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
rotmat = "rotational_matrix.cli:main"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]
